WeatherProject/force-app/main/default/objects/Weather_Data__c/Weather_Data__c.object-meta.xml
<CustomObject>
    <label>Weather Data</label>
    <nameField>
        <label>Weather Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weather Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>