WeatherProject/force-app/main/default/objects/Weather_Data__c/fields/Date_Time_of_Data_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Data_Calculation__c</fullName>
    <description>Date Time of Data Calculation from Time of data calculation, unix, UTC</description>
    <label>Date Time of Data Calculation</label>
    <type>DateTime</type>
</CustomField>