WeatherProject/force-app/main/default/objects/Weather_Data__c/fields/dt__c.field-meta.xml
<CustomField>
    <fullName>dt__c</fullName>
    <description>Time of data calculation, unix, UTC</description>
    <label>dt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>