WeatherProject/force-app/main/default/objects/Weather_Data__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>City ID</description>
    <label>Id</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>