WeatherProject/force-app/main/default/objects/Weather_Data__c/fields/Main_Humidity__c.field-meta.xml
<CustomField>
    <fullName>Main_Humidity__c</fullName>
    <description>Humidity, %</description>
    <label>Main Humidity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>