WeatherProject/force-app/main/default/objects/Weather_Data__c/fields/Main_Temp__c.field-meta.xml
<CustomField>
    <fullName>Main_Temp__c</fullName>
    <description>Temperature. Unit Default: Kelvin, Metric: Celsius, Imperial: Fahrenheit.</description>
    <label>Main Temp</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>