WeatherProject/force-app/main/default/objects/Weather_Data__c/fields/Sys_Country__c.field-meta.xml
<CustomField>
    <fullName>Sys_Country__c</fullName>
    <description>Country code (GB, JP etc.)</description>
    <label>Sys Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>