WeatherProject/force-app/main/default/objects/Weather_Data__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <description>Shift in seconds from UTC</description>
    <label>Timezone</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>