WeatherProject/force-app/main/default/objects/Weather_Data__c/fields/Weather_Description__c.field-meta.xml
<CustomField>
    <fullName>Weather_Description__c</fullName>
    <description>Weather condition within the group. You can get the output in your language.</description>
    <label>Weather Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>