WeatherProject/force-app/main/default/objects/Weather_Data__c/fields/Wind_Speed__c.field-meta.xml
<CustomField>
    <fullName>Wind_Speed__c</fullName>
    <description>Wind speed. Unit Default: meter/sec, Metric: meter/sec, Imperial: miles/hour.</description>
    <label>Wind Speed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>