WeatherProject/force-app/main/default/objects/Weather_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>dt__c</columns>
    <columns>Date_Time_of_Data_Calculation__c</columns>
    <columns>Timezone__c</columns>
    <columns>Main_Temp__c</columns>
    <columns>Main_Humidity__c</columns>
    <columns>Wind_Speed__c</columns>
    <columns>Weather_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>